<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text="Podaj swoją wagę i wzrost:"
        android:textColor="#F44336"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/weightInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Waga (kg)"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:text="Oblicz BMI" />

    <EditText
        android:id="@+id/heightInput"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="170dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Wzrost (cm)"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:layout_marginTop="400dp"
        android:fontFamily="sans-serif"
        android:text="Wprowadź dane i naciśnij przycisk, aby wyświetlić twój wynik BMI :)"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#673AB7"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:typeface="normal" />

    <Button
        android:id="@+id/openCalorieCalculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="630dp"
        android:text="Kalkulator kalorii"
        app:layout_anchor="@+id/resultText" />

    <Button
        android:id="@+id/openRecipesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="680dp"
        android:text="Zobacz przepisy" />

    <Button
        android:id="@+id/openChartButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="750dp"
        android:text="Wykres BMI" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>